--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
-      "target": "es6",
+      "target": "es5",
+      "lib": ["DOM", "ES5", "ScriptHost", "ES2015"],
       "module": "commonjs",
       "declaration": true,
       "outDir": "./lib",
